# srmcollider

./: .gitignore  README.md  run.py  runcollider.py
code/: CMakeLists.txt  DDB.py  Fileparser.py  MANIFEST  MANIFEST.in  README  Residues.py  SRM_parameters.py  SSRCalc3.par  about.html  calculate_eUIS.cpp  collider.py  combinations.cpp  combinatorics.h  combinatorics_test.C  createRTssrcalc.sql  create_db.py  create_fragments.py  create_tables.sql  csetup.py  distribution_notes.txt  epstopdf.sh  getNonUis.cpp  integratedrun.cpp  integratedrun.h  orinner_load.py  plot_closest_difference.py  plot_q1q3space.R  precursor.py  progress.py  py_integratedrun.cpp  py_rangetree.cpp  py_srmcolliderLib.h  rangetree.cpp  rangetree.h  rtvalidation.py  run.py  run_3strikes.py  run_eUIS.py  run_integrated.C  (+28 more)
code/Release/: ReleaseNotes  Release_patch1.patch  Release_patch2.patch  do_release.sh
code/cgi-scripts/: about.html  collider_config.py  download.html  instructions.html  plot_graph_dynamic.py  sharedhtml.py  srmcollider.py
code/css/: blue.css  brown.css  brownfancy.css  fancy.css  first.css  green.css  green2.css  ocker.css  orange.css  second.css  srmcollider.css
code/internal_test/: test_db_internal.py  test_speed.py
code/performance_tests/: test_speed.py
code/results/: analysis.txt
code/scripts/: count_transitions.py  prepare_rangetree.py  trypsinize.py
code/test/: sqlite_setupdb.py  sqltest_tables_setup.py  sqltestp.out  sqltestt.out  test_3strikes.py  test_all.py  test_cgetnonuis.py  test_collider.py  test_db.py  test_extra.py  test_independent.py  test_integrated.py  test_rangetree.py  test_shared.py  test_shared_large.py  test_speed.py
code/test/integration/: test_collider.py
code/test/test_integration/: test_collider.py
doc/: calculate_q1mindistr.py  header.tex  manndata.tex  notebook_srm.tex  run_eUIS.doc  run_integrated.doc  run_uis.doc  srmclashes.tex
results/: clashdistr.plt  pairlendist.plt  plot.plt  unique_ratios.plt  unique_transitions.plt
